fix responsive behaviour on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,8 @@ a, button {
     bottom:0%;
     left:0%;
     right: 0%;
-    position:absolute;
-
+    width: 100vw;
+    height: 100vh
 }
 
 .blue-body {
@@ -338,7 +338,7 @@ footer {
         margin-bottom: 1em;
     }    
     #quiz_success_text img {
-        height: 40px;
+        height: 30px;
     }  
     .play_button img{
         margin-right: 0;
@@ -362,9 +362,9 @@ footer {
     #homepage_text > img {
         margin-top: 1em;
         margin-bottom: 32px;
-        margin-left: 0;
+        margin-left: 24px;
         padding-left: 0;
-        height: 50px;
+        height: 40px;
     }
     #homepage_text {
         margin-left: .5em !important;
@@ -381,6 +381,21 @@ footer {
         bottom: 0px;
         margin-bottom: 0em;
         margin-top: 150px;
+        height: 300px;
+        bottom: 0px;
+    }
+    #game-over-graphic {
+        bottom: 0px;
+        margin-bottom: 0em;
+        width: 30%;
+        margin-left: 2%;
+        height: 30vh;
+    }
+
+    #game-over-graphic img {
+        bottom: 0px;
+        margin-bottom: 0em;
+        margin-top: 70px;
         height: 300px;
         bottom: 0px;
     }
@@ -429,7 +444,7 @@ footer {
         padding-right: 0;
     }
     .play_again img {
-        margin-left: 30%;
+        margin-left: 25%;
         margin-top: 24px;
     }
     .question h1{
@@ -438,12 +453,13 @@ footer {
     #main-logo img {
         height: 10em;
         margin-left: 1em;
+        margin-right: 0;
     }
     #main-logo {
         margin-top: 5em;
-        margin-left: 40%;
-        margin-right: 40%;
+        margin-left: 25%;
         margin-bottom: 1em;
+        margin-right: 0;
     }
 }
 
